# cpp_examples

container/: .gitignore  CMakeLists.txt  Makefile
container/include/: blocking_ring.h  ring.h  ring_2d_shared.h  ring_2dex.h
container/src/: blocking_ring.cc  ring.cc  ring_2d_shared.cc  ring_2dex.cc
container/test/: CMakeLists.txt  Makefile  main.cpp
container/test/Logger/include/: logger.h
container/test/Logger/src/: logger.cc
